# Aerial-Robotics-Drone-Project

./: Dockerfile  README.md  final_world.world  hard_world.world  requirements.txt  run_without_source.sh  run_without_source_withworld.sh  source_build_run_all.sh  start.sh
drone_project/: drone_controller.py
install/: local_setup.sh  setup.sh
install/drone_project/lib/drone_project/: drone_controller
install/drone_project/share/drone_project/: package.sh  package.xml
install/example_cpp_pkg/lib/example_cpp_pkg/: tracker
install/example_cpp_pkg/share/example_cpp_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_shared/share/ros2_shared/: package.sh
install/tello_description/share/tello_description/: local_setup.sh  package.sh
install/tello_driver/lib/tello_driver/: tello_joy_main
install/tello_driver/share/tello_driver/: local_setup.sh  package.sh
install/tello_gazebo/share/tello_gazebo/: package.sh
launch/: demo_track_launch.py
log/: latest_build
scripts/: prepare_workspace.sh  run_everything.sh
src/drone_project/: .run_everything.sh.swp  run_everything.sh  setup.py  setup.sh
src/drone_project/scripts/: drone_controller.py
src/example_cpp_pkg/: CMakeLists.txt  build.sh  package.xml  run.sh
src/example_cpp_pkg/include/example_cpp_pkg/: tracker.hpp
src/example_cpp_pkg/src/: tracker.cpp
src/tello_process/: package.xml  setup.cfg  setup.py
src/tello_process/launch/: launch.py
src/tello_process/tello_process/: controller.py  receiver.py
(+24 files in other folders)
